--- a/Client/src/Components/Stylesheets/Appinfo.css
+++ b/Client/src/Components/Stylesheets/Appinfo.css
@@ -27,12 +27,13 @@
     justify-content: flex-start; /* Align items at the start */
     align-items: center;
     max-width: 30%;
+    height: 30%;
     
   }
   
   .app-images img {
-    max-width: 200%;
-    height: auto;
+    max-width: 100%;
+    height: 40%;
     margin-bottom: 10px;
     margin-left: 60%;
     border-radius: 10px;
