--- a/Client/src/Components/Stylesheets/Webinar.css
+++ b/Client/src/Components/Stylesheets/Webinar.css
@@ -1,5 +1,5 @@
 .webinar_outer_container {
-  border: 2px solid #ddd;
+  /* border: 2px solid #ddd; */
   padding: 20px;
   border-radius: 8px;
   max-width: 1000px; /* Max width for the entire container */
