--- a/Client/src/Components/Stylesheets/Aboutus.css
+++ b/Client/src/Components/Stylesheets/Aboutus.css
@@ -2,11 +2,13 @@
   background-color: white;
   padding: 20px;
   text-align: center;
+  margin-bottom: 80px;
 }
 
 .slogan-section{
 
 margin-bottom: 40px;
+margin-top: 70px;
 }
 .slogan-section p{
   font-style: italic;
@@ -15,6 +17,7 @@ margin-bottom: 40px;
   border: 1px rgb(95, 95, 221);
   font-size: 2rem;
   margin-bottom: 15px;
+  
   animation: fadeIn 1.5s ease-in-out;
 }
 
@@ -23,6 +26,17 @@ margin-bottom: 40px;
   flex-wrap: wrap;
   justify-content: center;
   gap: 30px;
+}
+.about-us-descrption{
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.about-us-descrption p{
+width: 80%;
+  
+
 }
 
 .aboutus-card {
@@ -37,11 +51,11 @@ margin-bottom: 40px;
 }
 
 .aboutus-card img {
-  width: 80%;
+  width: 150px;
   height: 150px;
   object-fit: cover;
-  margin-top: 20px;
-  border-radius: 10px;
+  /* margin-top: 20px; */
+  border-radius:500px;
 }
 
 .aboutus-card h3 {
