--- a/Client/src/Components/Stylesheets/AppointmentBooking.css
+++ b/Client/src/Components/Stylesheets/AppointmentBooking.css
@@ -5,12 +5,13 @@
   max-width: 80%;
   margin: auto;
   margin-top: 30px;
-  margin-bottom: 10px;
+  margin-bottom: 100px;
+  margin-left: 330px;
   padding: 20px;
-  border: 1px solid #ccc;
+  /* border: 1px solid #ccc; */
   border-radius: 5px;
   background-color: #ffffff;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  /* box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); */
   animation: fadeIn 1s ease-in-out;
 }
 
@@ -24,8 +25,9 @@
 }
 
 .appointment-booking h3 {
-  text-align: center;
+margin-left:  300px;
   margin-bottom: 20px;
+
 }
 
 .appointment-booking form .form-group {
@@ -42,7 +44,7 @@
 
 .appointment-booking_input
  {
-  width: 85%;
+  width: 65%;
   margin-left: 45px;
   /* padding: 40px; */
   box-sizing: border-box;
