--- a/Client/src/Components/Stylesheets/Contactus.css
+++ b/Client/src/Components/Stylesheets/Contactus.css
@@ -3,9 +3,10 @@
   flex-wrap: wrap;
   justify-content: space-between;
   padding: 20px;
-  margin: 0 auto;
+  margin: 50px auto;
   font-family: "Source Serif Pro", sans-serif;
   max-width: 1200px;
+
 }
 
 .contact-form-container,
@@ -17,7 +18,7 @@
 
 .send-msg-heading,
 .contactus-heading {
-  color: #0f5285;
+  color: #083a60;
   margin: 0 0 30px 0;
   text-align: center;
 }
@@ -31,14 +32,15 @@
   width: 100%;
   padding: 10px;
   box-sizing: border-box;
-  border: 1px solid #ccc;
-  border-radius: 5px;
+  border: 2px solid #ccc;
+  border-radius: 10px;
   font-size: 14px;
 }
 
 .contact-form-group input::placeholder,
 .contact-form-group textarea::placeholder {
   color: #999;
+  
 }
 
 .contact-form-group textarea {
@@ -52,7 +54,7 @@
   background-color: #007bff;
   color: white;
   border: none;
-  border-radius: 20px;
+  border-radius: 50px;
   cursor: pointer;
   font-size: 14px;
   background-image: linear-gradient(90deg, #0056b3 50%, #007bff 50%);
@@ -75,7 +77,7 @@
 }
 
 .contact-info h4 {
-  color: #0f5285;
+  color: #083a60;
   font-family: "Source Serif Pro", sans-serif;
   font-size: 25px;
   margin-top: 15px;
@@ -90,7 +92,7 @@
 .contact-info svg {
   margin-right: 8px;
   vertical-align: middle;
-  color: #25d3d3;
+  color: #083a60;
 }
 
 /* Responsive Styles */
