--- a/Client/src/Components/Stylesheets/LandingPageBlogs.css
+++ b/Client/src/Components/Stylesheets/LandingPageBlogs.css
@@ -5,10 +5,13 @@
     align-items: center;
     flex-direction: column;
     margin-top: 50px;
+    margin-bottom: 80px;
   }
   .blogs-landingpage-inner-container{
     display: flex;
-    justify-content: space-evenly;
+   margin-left: 20%;
+
+    
     align-items: center;
     width: 100%;
     flex-wrap: wrap;
@@ -16,60 +19,41 @@
   }
   .blogs-landingpage-blogcard-container{
     width: 300px;
-    margin: 10px;
+    height: 400px; /* Set a fixed height */
+    margin: 5px;
+    margin-left: 70px;
     border-radius: 20px;
     background-color: rgb(255, 255, 255);
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.11);
-    
-  }
-  .blogs-landingpage-blogcard-container img{
-    width: 300px;
-    
-    border-top-left-radius: 20px;
-    border-top-right-radius: 20px;
-  }
-  #blog-category{
-    width: 30%;
-    text-align: center;
-    padding: 3px;
-    background-color: rgba(0, 0, 255, 0.13);
-    border-radius: 20px;
-    color: blue;
-  }
-  #blog-topic{
-    margin-top: 5px;
-    font-weight: 800;
-  }
-  #blog-content{
-    font-size: 13px;
-    color: gray;
-  }
+    display: flex;
+    flex-direction: column; /* Ensure the content stacks vertically */
+    justify-content: space-between; /* Add space between elements */
+    overflow: hidden; /* Hide overflow */
+}
+.blogs-landingpage-blogcard-container img{
+  width: 300px;
+  height: 200px; 
+  object-fit: cover; 
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
+}
+#blog-category, #blog-topic, #blog-content, #blog-author, #blog-date, #blog-read-more {
+
+  overflow: hidden; /* Handle overflowing content */
+  text-overflow: ellipsis; /* Show "..." for overflow */
+  white-space: nowrap; /* Prevent text from wrapping */
+}
+
+
+
+
   .blogs-landingpage-flex-date-container{
     display: flex;
     justify-content: space-between;
     margin-top: 5px;
   }
-  #blog-author{
-    font-size: 13px;
-    color: blue;
-  
-  }
-  #blog-date{
-    font-size: 13px;
-    color: gray;
-  }
-  #blog-author i{
-    background-color: rgb(214, 214, 214);
-    padding: 5px;
-    color: black;
-    border-radius: 20px;
-  }
-  #blog-read-more{
-    color: blue;
-    font-weight: 700;
-    cursor: pointer;
-  }
   #blog-findblog-discription{
     color: blue;
-    font-size: 13px;
+    font-size: 15px;
+    margin-top: 5px;
   }
