--- a/Client/src/App.css
+++ b/Client/src/App.css
@@ -5,7 +5,7 @@
 body, html {
   margin: 0;
   padding: 0;
-  overflow-x: hidden; /* Disable horizontal scroll */
+  overflow-x: hidden; 
  
 }
 
@@ -883,6 +883,7 @@ color: aliceblue;
 
 .footer-column h3 {
   margin-bottom: 10px;
+  margin-right: 70%;
 }
 
 .footer-column ul {
