--- a/Client/src/Components/Stylesheets/LandingPageBlogs.css
+++ b/Client/src/Components/Stylesheets/LandingPageBlogs.css
@@ -9,19 +9,17 @@
   }
   .blogs-landingpage-inner-container{
     display: flex;
-   margin-left: 20%;
-
-    
+    justify-content: space-evenly;
     align-items: center;
     width: 100%;
     flex-wrap: wrap;
     margin-top: 50px;
   }
   .blogs-landingpage-blogcard-container{
-    width: 300px;
+    width: 350px;
     height: 400px; /* Set a fixed height */
     margin: 5px;
-    margin-left: 70px;
+   
     border-radius: 20px;
     background-color: rgb(255, 255, 255);
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.11);
@@ -31,21 +29,41 @@
     overflow: hidden; /* Hide overflow */
 }
 .blogs-landingpage-blogcard-container img{
-  width: 300px;
+  width: 350px;
   height: 200px; 
   object-fit: cover; 
   border-top-left-radius: 20px;
   border-top-right-radius: 20px;
 }
-#blog-category, #blog-topic, #blog-content, #blog-author, #blog-date, #blog-read-more {
+#blog-category, #blog-author, #blog-date {
 
   overflow: hidden; /* Handle overflowing content */
   text-overflow: ellipsis; /* Show "..." for overflow */
   white-space: nowrap; /* Prevent text from wrapping */
 }
+#blog-content {
+  font-size: 13px;
+  color: gray;
+}
+#blog-topic {
+  margin-top: 5px;
+  font-weight: 800;
+}
 
+  #blog-category {
+    width: 40%;
+    text-align: center;
+    padding: 3px;
+    background-color: rgba(0, 0, 255, 0.13);
+    border-radius: 20px;
+    color: blue;
+  }
 
-
+  #blog-read-more {
+    color: blue;
+    font-weight: 700;
+    text-decoration: none !important;
+  }  
 
   .blogs-landingpage-flex-date-container{
     display: flex;
