landing page color changed from blue to #007bff

--- a/Client/src/Components/Stylesheets/LandingPageBlogs.css
+++ b/Client/src/Components/Stylesheets/LandingPageBlogs.css
@@ -71,7 +71,7 @@
     margin-top: 5px;
   }
   #blog-findblog-discription{
-    color: blue;
+    color: #007bff;
     font-size: 15px;
     margin-top: 5px;
   }
