chanegs in blue color read more landing page blogs

--- a/Client/src/Components/Stylesheets/LandingPageBlogs.css
+++ b/Client/src/Components/Stylesheets/LandingPageBlogs.css
@@ -60,7 +60,7 @@
   }
 
   #blog-read-more {
-    color: blue;
+    color: #007bff;
     font-weight: 700;
     text-decoration: none !important;
   }  
